test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-valid/00-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: require-owner
- apiVersion: v1
  kind: Namespace
  name: mytestingns
