test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-valid/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- resource.yaml
assert:
- resource.yaml
