test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-valid/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mytestingns
  labels:
    owner: one-team
  annotations:
    cloud.platformzero.com/serviceClass: "xl2"
